Column layout to row

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 	<!-- endinject -->
 </head>
 <body md-colors="{background: 'grey-300'}">
-	<div ui-view layout="column" style="height: 100%; overflow: hidden;" flex="100"></div>
+	<div ui-view layout="row" style="height: 100%; overflow: hidden;" flex="100"></div>
 	<!-- inject:js -->
 	<!-- endinject -->
 </body>
